tmux: add bind to move pane to window

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -35,6 +35,9 @@ bind -r -T prefix C-Down resize-pane -D
 bind -r -T prefix C-Left resize-pane -L
 bind -r -T prefix C-Right resize-pane -R
 
+# move pane to window
+bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
+
 set-option -g status-right " ###{pane_pid} %H:%M %d-%b-%y"
 
 set -g xterm-keys on
