tmux: add bind to cycle through windows

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,15 +8,22 @@ set -g mouse on
 set -sg escape-time 50
 set -g focus-events on
 set -g set-clipboard on
+set -g repeat-time 1000
 set-option -g renumber-windows on
 set-window-option -g mode-keys vi
 
-bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+# cycle through windows
+bind -r -T prefix Tab next-window
+bind -r -T prefix BTab previous-window
+bind -r -T prefix M-Tab next-window
+bind -r -T prefix M-BTab previous-window
+
+# preserve current directory when creating/splitting a window
+bind -T prefix c new-window -c "#{pane_current_path}"
+bind -T prefix '"' split-window -c "#{pane_current_path}"
+bind -T prefix % split-window -h -c "#{pane_current_path}"
 
 # resize windows by holding keys
-set -g repeat-time 1000
 bind -r -T prefix M-C-Up resize-pane -U 5
 bind -r -T prefix M-C-Down resize-pane -D 5
 bind -r -T prefix M-C-Left resize-pane -L 5
