Migrate to chezmoi

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,18 @@
-[submodule "zsh/plugins/zsh-syntax-highlighting"]
-	path = zsh/plugins/zsh-syntax-highlighting
+[submodule "dot_zsh-plugins/external_zsh-syntax-highlighting"]
+	path = dot_zsh-plugins/external_zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
-[submodule "scripts/bash-getopt"]
-	path = scripts/bash-getopt
-	url = https://github.com/notpeelz/bash-getopt.git
+[submodule "external_dot_powerlevel10k"]
+	path = external_dot_powerlevel10k
+	url = https://github.com/romkatv/powerlevel10k.git
+[submodule "dot_tmux-plugins/external_tmux-sensible"]
+	path = dot_tmux-plugins/external_tmux-sensible
+	url = https://github.com/tmux-plugins/tmux-sensible
+[submodule "dot_tmux-plugins/external_tmux-onedark-theme"]
+	path = dot_tmux-plugins/external_tmux-onedark-theme
+	url = https://github.com/odedlaz/tmux-onedark-theme.git
+[submodule "dot_zsh-plugins/external_dot_powerlevel10k"]
+	path = dot_zsh-plugins/external_dot_powerlevel10k
+	url = https://github.com/romkatv/powerlevel10k.git
+[submodule "dot_zsh-plugins/external_powerlevel10k"]
+	path = dot_zsh-plugins/external_powerlevel10k
+	url = https://github.com/romkatv/powerlevel10k.git
