--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,8 +1,7 @@
 # vim:ft=tmux
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+run-shell "$HOME/.tmux-plugins/tmux-sensible/sensible.tmux"
+run-shell "$HOME/.tmux-plugins/tmux-onedark-theme/tmux-onedark-theme.tmux"
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -54,6 +53,3 @@ set -gas terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{2
 # fix cursor shape not changing in tmux
 # https://github.com/neovim/neovim/pull/3165#issuecomment-176451922
 set -gas terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
-
-# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
