tmux: move config and plugins to XDG paths

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # vim:ft=tmux
 
-run-shell "$HOME/.tmux-plugins/tmux-sensible/sensible.tmux"
-run-shell "$HOME/.tmux-plugins/tmux-onedark-theme/tmux-onedark-theme.tmux"
+run-shell "bash -c '\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/plugins/tmux-sensible/sensible.tmux'"
+run-shell "bash -c '\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/plugins/tmux-onedark-theme/tmux-onedark-theme.tmux'"
 
 set -g base-index 1
 setw -g pane-base-index 1
