kitty: use wayland

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,6 +1,4 @@
-# Force X11, since Mutter doesn't support Wayland SSD (server-side
-# decorations)
-linux_display_server x11
+# Disable copying to primary clipboard
 copy_on_select no
 # Disable pasting with middle-click
 mouse_map middle release ungrabbed no_op
