kitty: disable pasting with middle-click completely

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # Disable copying to primary clipboard
 copy_on_select no
 # Disable pasting with middle-click
-mouse_map middle release ungrabbed no_op
+mouse_map middle release grabbed,ungrabbed no_op
 # wayland_titlebar_color #333333
 # hide_window_decorations yes
 
