kitty: unmap shift+middle

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,9 +1,8 @@
-# Disable copying to primary clipboard
+# Disable primary clipboard
 copy_on_select no
-# Disable pasting with middle-click
 mouse_map middle release grabbed,ungrabbed no_op
-# wayland_titlebar_color #333333
-# hide_window_decorations yes
+mouse_map shift+middle release grabbed,ungrabbed no_op
+map shift+insert no_op
 
 # Disable audible bell
 enable_audio_bell no
