tmux: unbind middle mouse click

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -34,6 +34,9 @@ bind -r -T prefix C-Down resize-pane -D
 bind -r -T prefix C-Left resize-pane -L
 bind -r -T prefix C-Right resize-pane -R
 
+# unbind middle mouse click
+unbind-key -T root MouseDown2Pane
+
 # move pane to window
 bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
 
