kitty: disable window_alert_on_bell

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -7,6 +7,9 @@ map shift+insert no_op
 # Disable audible bell
 enable_audio_bell no
 
+# Disable window bell
+window_alert_on_bell no
+
 # Disable quit confirmation prompt
 confirm_os_window_close 0
 
