--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,17 +1,17 @@
 # vim:ft=tmux
 
-run-shell "bash -c '\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/plugins/tmux-sensible/sensible.tmux'"
-run-shell "bash -c '\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/plugins/tmux-onedark-theme/tmux-onedark-theme.tmux'"
+run-shell "\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/plugins/tmux-sensible/sensible.tmux"
+run-shell "\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/plugins/tmux-onedark-theme/tmux-onedark-theme.tmux"
 
 set -g base-index 1
-setw -g pane-base-index 1
+set -g pane-base-index 1
 set -g mouse on
-set -sg escape-time 50
+set -g escape-time 50
 set -g focus-events on
 set -g set-clipboard on
 set -g repeat-time 1000
-set-option -g renumber-windows on
-set-window-option -g mode-keys vi
+set -g renumber-windows on
+set -g mode-keys vi
 
 # cycle through windows
 bind -r -T prefix Tab next-window
@@ -35,13 +35,16 @@ bind -r -T prefix C-Left resize-pane -L
 bind -r -T prefix C-Right resize-pane -R
 
 # unbind middle mouse click
-unbind-key -T root MouseDown2Pane
+unbind -T root MouseDown2Pane
 
 # move pane to window
 bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
 
-set-option -g status-right " ###{pane_pid} %H:%M %d-%b-%y"
+# status bar
+set -g status-justify left
+set -g status-position bottom
 
+# enable xterm keys
 set -g xterm-keys on
 
 set -g default-terminal "screen-256color"
