tmux: add floating terminal popup

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -12,6 +12,11 @@ set -g set-clipboard on
 set -g repeat-time 1000
 set -g renumber-windows on
 set -g mode-keys vi
+set -g popup-border-lines rounded
+
+# floating terminal
+set-hook -g session-created "if -F '#{m/ri:^_popup-,#{hook_session_name}}' 'set status off'"
+bind -T root C-t run-shell "\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/scripts/popup-toggle"
 
 # cycle through windows
 bind -r -T prefix Tab next-window
