tmux: center status bar

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -46,7 +46,7 @@ unbind -T root MouseDown2Pane
 bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
 
 # status bar
-set -g status-justify left
+set -g status-justify absolute-centre
 set -g status-position bottom
 
 # enable xterm keys
