tmux: hide status-left/status-right for popups

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -15,7 +15,10 @@ set -g mode-keys vi
 set -g popup-border-lines rounded
 
 # floating terminal
-set-hook -g session-created "if -F '#{m/ri:^_popup-,#{hook_session_name}}' 'set status off'"
+set-hook -g session-created "if -F '#{m/ri:^_popup-,#{hook_session_name}}' '\
+set status-left \"\"; \
+set status-right \"\" \
+'"
 bind -T root C-t run-shell "\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/scripts/popup-toggle"
 
 # cycle through windows
