tmux: remove status-right

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -51,6 +51,7 @@ bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
 # status bar
 set -g status-justify absolute-centre
 set -g status-position bottom
+set -g status-right " "
 
 # enable xterm keys
 set -g xterm-keys on
