--- a/dot_config/environment.d/path.conf
+++ b/dot_config/environment.d/path.conf
@@ -1,1 +1,1 @@
-PATH=${XDG_DATA_HOME:-${HOME}/.local/share}/rtx/shims:${HOME}/.local/bin:${PATH}
+PATH=${XDG_DATA_HOME:-${HOME}/.local/share}/mise/shims:${HOME}/.local/bin:${PATH}
