env: disable python cache

--- a/dot_config/environment.d/xdg.conf
+++ b/dot_config/environment.d/xdg.conf
@@ -21,6 +21,6 @@ STACK_ROOT="${XDG_DATA_HOME:-$HOME/.local/share}/stack"
 DOTNET_CLI_HOME="${XDG_DATA_HOME:-$HOME/.local/share}/dotnet"
 
 # python
-PYTHONPYCACHEPREFIX="${XDG_CACHE_HOME:-$HOME/.cache}/python"
+PYTHONDONTWRITEBYTECODE=1
 PYTHONUSERBASE="${XDG_DATA_HOME:-$HOME/.local/share}/python"
 PYTHONSTARTUP="${XDG_CONFIG_HOME:-$HOME/.config}/python/pythonrc"
