tmux: change floating terminal bind to C-b,C-t

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -19,7 +19,7 @@ set-hook -g session-created "if -F '#{m/ri:^_popup-,#{hook_session_name}}' '\
 set status-left \"\"; \
 set status-right \"\" \
 '"
-bind -T root C-t run-shell "\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/scripts/popup-toggle"
+bind -T prefix C-t run-shell "\${XDG_DATA_HOME:-\$HOME/.local/share}/tmux/scripts/popup-toggle"
 
 # cycle through windows
 bind -r -T prefix Tab next-window
