kitty: set default cursor shape

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -31,6 +31,9 @@ font_size 14.0
 # Disable cursor blink
 cursor_blink_interval 0
 
+# Default cursor shape
+cursor_shape beam
+
 # Disable default hotkeys
 clear_all_shortcuts yes
 
