kitty: disable shell integration
It doesn't work with tmux anyway.

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -34,6 +34,9 @@ cursor_blink_interval 0
 # Default cursor shape
 cursor_shape beam
 
+# Disable shell integration
+shell_integration disabled
+
 # Disable default hotkeys
 clear_all_shortcuts yes
 
