--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -56,15 +56,4 @@ set -g status-right " "
 # enable xterm keys
 set -g xterm-keys on
 
-set -g default-terminal "screen-256color"
-# tell tmux that outside terminal supports true color
-set -ga terminal-overrides ",xterm-256color*:Tc"
-
-# https://superuser.com/a/1165558/1129836
-# set -g terminal-overrides ",screen-256color*:Tc,screen*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
-set -gas terminal-overrides ',*:Smulx=\E[4::%p1%dm' # undercurl support
-set -gas terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # underscore colours - needs tmux-3.0
-
-# fix cursor shape not changing in tmux
-# https://github.com/neovim/neovim/pull/3165#issuecomment-176451922
-set -gas terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+set -g default-terminal "xterm-kitty"
