tmux: fix cursor shape capabilities

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -57,3 +57,12 @@ set -g status-right " "
 set -g xterm-keys on
 
 set -g default-terminal "xterm-kitty"
+
+# https://invisible-island.net/xterm/terminfo.html
+
+# the Ss cap is used to set the cursor style (DECSCUSR)
+# this lets Neovim change the cursor
+set -ga terminal-overrides '*:Ss=\E[%p1%d q'
+
+# the Se cap is used to reset the cursor style
+set -ga terminal-overrides '*:Se=\E[ q'
