tmux: enable rgb colors for kitty

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -56,6 +56,9 @@ set -g status-right " "
 # enable xterm keys
 set -g xterm-keys on
 
+# enable rgb colors
+set -ga terminal-features ',xterm-kitty:RGB'
+
 # https://invisible-island.net/xterm/terminfo.html
 
 # the Ss cap is used to set the cursor style (DECSCUSR)
