env: use XDG basedir config/cache paths for kubectl

--- a/.config/environment.d/xdg.conf
+++ b/.config/environment.d/xdg.conf
@@ -24,3 +24,7 @@ DOTNET_CLI_HOME="${XDG_DATA_HOME:-$HOME/.local/share}/dotnet"
 PYTHONDONTWRITEBYTECODE=1
 PYTHONUSERBASE="${XDG_DATA_HOME:-$HOME/.local/share}/python"
 PYTHONSTARTUP="${XDG_CONFIG_HOME:-$HOME/.config}/python/pythonrc"
+
+# kubernetes
+KUBECONFIG="${XDG_CONFIG_HOME:-$HOME/.config}/kube"
+KUBECACHEDIR="${XDG_CACHE_HOME:-$HOME/.cache}/kube"
