use \033 instead of \E or \e

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -63,7 +63,7 @@ set -ga terminal-features ',xterm-kitty:RGB'
 
 # the Ss cap is used to set the cursor style (DECSCUSR)
 # this lets Neovim change the cursor
-set -ga terminal-overrides '*:Ss=\E[%p1%d q'
+set -ga terminal-overrides '*:Ss=\033[%p1%d q'
 
 # the Se cap is used to reset the cursor style
-set -ga terminal-overrides '*:Se=\E[ q'
+set -ga terminal-overrides '*:Se=\033[ q'
