tmux: set Se termcap to `\033[0 q`

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -59,11 +59,11 @@ set -g xterm-keys on
 # enable rgb colors
 set -ga terminal-features ',xterm-kitty:RGB'
 
+# Fix DECSCUSR
 # https://invisible-island.net/xterm/terminfo.html
 
-# the Ss cap is used to set the cursor style (DECSCUSR)
-# this lets Neovim change the cursor
+# the Ss cap is used to set the cursor style
 set -ga terminal-overrides '*:Ss=\033[%p1%d q'
 
 # the Se cap is used to reset the cursor style
-set -ga terminal-overrides '*:Se=\033[ q'
+set -ga terminal-overrides '*:Se=\033[0 q'
