zsh: set ZDOTDIR to $XDG_CONFIG_HOME/zsh

--- a/.config/environment.d/xdg.conf
+++ b/.config/environment.d/xdg.conf
@@ -20,6 +20,9 @@ STACK_ROOT="${XDG_DATA_HOME:-$HOME/.local/share}/stack"
 # dotnet
 DOTNET_CLI_HOME="${XDG_DATA_HOME:-$HOME/.local/share}/dotnet"
 
+# zsh
+ZDOTDIR="${XDG_CONFIG_HOME:-$HOME/.config}/zsh"
+
 # python
 PYTHONDONTWRITEBYTECODE=1
 PYTHONUSERBASE="${XDG_DATA_HOME:-$HOME/.local/share}/python"
