tmux: don't copy selection when dragging mouse

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,6 +45,9 @@ bind -r -T prefix C-Right resize-pane -R
 # unbind middle mouse click
 unbind -T root MouseDown2Pane
 
+# don't copy selection when dragging mouse
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
 # move pane to window
 bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
 
