tmux: don't exit copy-mode when yanking

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -48,6 +48,9 @@ unbind -T root MouseDown2Pane
 # don't copy selection when dragging mouse
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+# don't exit copy-mode when yanking
+bind -T copy-mode-vi y send-keys -X copy-selection
+
 # move pane to window
 bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
 
