tmux: unbind default copy-mode yank key

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -51,6 +51,9 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 # don't exit copy-mode when yanking
 bind -T copy-mode-vi y send-keys -X copy-selection
 
+# unbind default copy-mode yank key
+unbind -T copy-mode-vi enter
+
 # move pane to window
 bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
 
