tmux: begin copy-mode selection with "v"

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -54,6 +54,9 @@ bind -T copy-mode-vi y send-keys -X copy-selection
 # unbind default copy-mode yank key
 unbind -T copy-mode-vi enter
 
+# begin copy-mode selection with "v"
+bind -T copy-mode-vi v send-keys -X begin-selection
+
 # move pane to window
 bind -T prefix @ command-prompt -p "move pane to window:" "join-pane -t ':%%'"
 
