env: use xdg basedir for GNUPGHOME

--- a/.config/environment.d/xdg.conf
+++ b/.config/environment.d/xdg.conf
@@ -31,3 +31,6 @@ PYTHONSTARTUP="${XDG_CONFIG_HOME:-$HOME/.config}/python/pythonrc"
 # kubernetes
 KUBECONFIG="${XDG_CONFIG_HOME:-$HOME/.config}/kube"
 KUBECACHEDIR="${XDG_CACHE_HOME:-$HOME/.cache}/kube"
+
+# GnuPG
+GNUPGHOME="${XDG_DATA_HOME:-$HOME/.local/share}/gnupg"
