env: use xdg basedir for PlatformIO

--- a/.config/environment.d/xdg.conf
+++ b/.config/environment.d/xdg.conf
@@ -34,3 +34,6 @@ KUBECACHEDIR="${XDG_CACHE_HOME:-$HOME/.cache}/kube"
 
 # GnuPG
 GNUPGHOME="${XDG_DATA_HOME:-$HOME/.local/share}/gnupg"
+
+# PlatformIO
+PLATFORMIO_CORE_DIR="${XDG_DATA_HOME:-$HOME/.local/share}/platformio"
