zsh: update plugins

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,6 +4,12 @@ mouse_map middle release grabbed,ungrabbed no_op
 mouse_map shift+middle release grabbed,ungrabbed no_op
 map shift+insert no_op
 
+remember_window_size no
+initial_window_width 900
+initial_window_height 650
+
+window_padding_width 4
+
 # Disable audible bell
 enable_audio_bell no
 
@@ -48,9 +54,14 @@ map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
 map shift+insert paste_from_clipboard
 
+# Hotkey: scrollback
+map ctrl+shift+h show_scrollback
+
 # Hotkey: font size
 map ctrl+shift+equal change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
 map ctrl+shift+0 change_font_size all 0
 
 include theme.conf
+background_opacity 0.9
+dynamic_background_opacity yes
