tmux: allow-passthrough

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,6 +13,7 @@ set -g repeat-time 1000
 set -g renumber-windows on
 set -g mode-keys vi
 set -g popup-border-lines rounded
+set -g allow-passthrough all
 
 # floating terminal
 set-hook -g session-created "if -F '#{m/ri:^_popup-,#{hook_session_name}}' '\
