code: enable editor.scrollOnMiddleClick

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -152,4 +152,5 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "window.zoomLevel": -1,
+  "editor.scrollOnMiddleClick": true,
 }
