--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -151,6 +151,9 @@
   "[xml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[rust]": {
+    "editor.formatOnSave": true,
+  },
   "window.zoomLevel": -1,
   "editor.scrollOnMiddleClick": true,
 }
