code: enable formatOnSave for python

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -154,6 +154,9 @@
   "[rust]": {
     "editor.formatOnSave": true,
   },
+  "[python]": {
+    "editor.formatOnSave": true,
+  },
   "window.zoomLevel": -1,
   "editor.scrollOnMiddleClick": true,
 }
