--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -159,6 +159,7 @@
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
   },
+  "python.analysis.typeCheckingMode": "strict",
   "window.zoomLevel": -1,
   "editor.scrollOnMiddleClick": true,
 }
