code: use 4-space indentation for Rust

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -153,6 +153,8 @@
   },
   "[rust]": {
     "editor.formatOnSave": true,
+    "editor.tabSize": 4,
+    "editor.insertSpaces": true,
   },
   "[python]": {
     "editor.formatOnSave": true,
